--- a/pwa/Makefile
+++ b/pwa/Makefile
@@ -3,16 +3,16 @@ IMG_HUB?=docker.io/jmzwcn
 TAG?=${shell date "+%Y%m%d-%H%M"}
 
 clean:
-	rm -rf dist 
+	rm -rf dist
 #	-cp resources/sign/* platforms/android
 
 build:clean
-	ionic build
-	rm -rf dist/js/*legacy*
+#	ionic build --prod
+	./node_modules/.bin/vue-cli-service build --no-module
 #	docker build -t $(IMG_HUB)/$(SERVICE):$(TAG) .
 
 push:build
-	docker build -t $(IMG_HUB)/$(SERVICE):$(TAG) .
+	docker build --platform=linux/arm64 -t $(IMG_HUB)/$(SERVICE):$(TAG) .
 	docker push $(IMG_HUB)/$(SERVICE):$(TAG)
 
 resource:
