--- a/pwa/Dockerfile
+++ b/pwa/Dockerfile
@@ -4,6 +4,6 @@ ADD ./nginx.conf /etc/nginx/conf.d/default.conf
 #ADD ./cert/fullchain.cer ./cert/iyou.city.key /etc/
 ADD ./dist /usr/share/nginx/html
 
-EXPOSE 8080
+EXPOSE 80 443
 
 CMD ["nginx", "-g", "daemon off;"]
