--- a/pwa/Dockerfile
+++ b/pwa/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:alpine
 
 ADD ./nginx.conf /etc/nginx/conf.d/default.conf
-#ADD ./cert/fullchain.cer ./cert/iyou.city.key /etc/
+ADD ./cert/fullchain.cer ./cert/iyou.city.key /etc/
 ADD ./dist /usr/share/nginx/html
 
 EXPOSE 80 443
