--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -1,8 +1,8 @@
 server {
-    listen 80;
-    #listen 443 ssl http2;
-    #ssl_certificate /etc/fullchain.cer;
-    #ssl_certificate_key /etc/iyou.city.key;
+    #listen 80;
+    listen 443 ssl http2;
+    ssl_certificate /etc/fullchain.cer;
+    ssl_certificate_key /etc/iyou.city.key;
 
     root /usr/share/nginx/html;
     index index.html index.htm;
