--- a/pwa/package.json
+++ b/pwa/package.json
@@ -20,6 +20,7 @@
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
     "ionicons": "^6.0.3",
+    "swiper": "^9.0.4",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
