--- a/pwa/package.json
+++ b/pwa/package.json
@@ -18,7 +18,9 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@types/google-protobuf": "^3.15.6",
     "core-js": "^3.6.5",
+    "google-protobuf": "^3.21.2",
     "ionicons": "^6.0.3",
     "swiper": "^9.0.4",
     "vue": "^3.2.21",
