--- a/backend/Makefile
+++ b/backend/Makefile
@@ -45,7 +45,7 @@ generate-js:
 	@$(PROTOC) -I./service service/*.proto \
 	--js_out=import_style=commonjs:service/js \
 	--grpc-web_out=import_style=commonjs+dts,mode=grpcweb:service/js
-	cp -rf service/js/* ../pwa/src/sdk
+	cp -rf service/js/* ../frontend/src/sdk
 	@echo Generate-js completely.
 
 generate-descriptor:
