--- a/pwa/package.json
+++ b/pwa/package.json
@@ -21,6 +21,7 @@
     "@types/google-protobuf": "^3.15.6",
     "core-js": "^3.6.5",
     "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.4.2",
     "ionicons": "^6.0.3",
     "swiper": "^9.0.4",
     "vue": "^3.2.21",
