--- a/zwan/Makefile
+++ b/zwan/Makefile
@@ -54,10 +54,10 @@ generate-descriptor:
 	@echo Generate-descriptor completely.
 
 build:generate
-	CGO_ENABLED=0 go build -ldflags='$(LD_FLAGS)' -o bundles/$(SERVICE) internal/cmd/*.go
+	CGO_ENABLED=0 GOOS=linux go build -ldflags='$(LD_FLAGS)' -o bundles/$(SERVICE) internal/cmd/*.go
 
 image:build
-	docker build -t $(IMG_HUB)/$(SERVICE):$(TAG) .
+	docker build --platform=linux/arm64 -t $(IMG_HUB)/$(SERVICE):$(TAG) .
 
 push:image
 	docker push $(IMG_HUB)/$(SERVICE):$(TAG)
