--- a/zwan/Makefile
+++ b/zwan/Makefile
@@ -54,7 +54,7 @@ generate-descriptor:
 	@echo Generate-descriptor completely.
 
 build:generate
-	CGO_ENABLED=0 GOOS=linux go build -ldflags='$(LD_FLAGS)' -o bundles/$(SERVICE) internal/cmd/*.go
+	GOOS=linux go build -ldflags='$(LD_FLAGS)' -o bundles/$(SERVICE) internal/cmd/*.go
 
 image:build
 	docker build --platform=linux/arm64 -t $(IMG_HUB)/$(SERVICE):$(TAG) .
