--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -10,4 +10,10 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
+
+    location /zwan {
+        grpc_set_header Content-Type application/grpc;
+        grpc_set_header X-Forwarded-For $remote_addr;
+        grpc_pass grpc://zwan:50051;
+    }
 }
