--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -12,8 +12,16 @@ server {
     }
 
     location /zwan {
+        #auth_request /auth
         grpc_set_header Content-Type application/grpc;
         grpc_set_header X-Forwarded-For $remote_addr;
         grpc_pass grpc://zwan:50051;
     }
+
+    # location /auth {
+    #     proxy_pass ...
+    #     proxy_pass_request_body off;
+    #     proxy_set_header Content-Length "";
+    #     proxy_set_header X-Original-URI $request_uri;
+    # }
 }
