--- a/pwa/package.json
+++ b/pwa/package.json
@@ -16,6 +16,7 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
+    "@chenfengyuan/vue-qrcode": "^2.0.0",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "@types/google-protobuf": "^3.15.6",
@@ -23,8 +24,9 @@
     "google-protobuf": "^3.21.2",
     "grpc-web": "^1.4.2",
     "ionicons": "^6.0.3",
+    "qrcode": "^1.5.3",
     "swiper": "^9.0.4",
-    "vue": "^3.2.21",
+    "vue": "^3.2.47",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
