--- a/pwa/package.json
+++ b/pwa/package.json
@@ -27,6 +27,7 @@
     "qrcode": "^1.5.3",
     "swiper": "^9.0.4",
     "vue": "^3.2.47",
+    "vue-qrcode": "^2.2.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
