--- a/pwa/package.json
+++ b/pwa/package.json
@@ -16,8 +16,9 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
+    "@ionic/core": "^7.0.7",
+    "@ionic/vue": "^7.0.7",
+    "@ionic/vue-router": "^7.0.7",
     "@types/google-protobuf": "^3.15.6",
     "core-js": "^3.6.5",
     "google-protobuf": "^3.21.2",
@@ -25,8 +26,8 @@
     "ionicons": "^6.0.3",
     "qrcode.vue": "^3.4.0",
     "swiper": "^9.0.4",
-    "vue": "^3.2.47",
-    "vue-router": "^4.0.12"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@capacitor/cli": "4.6.1",
