Adopt container build for zwan/pwa.
Signed-off-by: jmzwcn <jmzwcn@jmzwcndeAir.lan>

--- a/pwa/Makefile
+++ b/pwa/Makefile
@@ -2,16 +2,17 @@ SERVICE=pwa
 IMG_HUB?=docker.io/jmzwcn
 TAG?=${shell date "+%Y%m%d-%H%M"}
 
-clean:
+#clean:
 #	rm -rf dist
 #	-cp resources/sign/* platforms/android
 
-build:clean
+#build:clean
 #	ionic build --prod
-	./node_modules/.bin/vue-cli-service build --no-module
+#	./node_modules/.bin/vue-cli-service build --no-module
 #	docker build -t $(IMG_HUB)/$(SERVICE):$(TAG) .
 
-push:build
+#push:build
+push:
 	docker build --platform=linux/arm64 -t $(IMG_HUB)/$(SERVICE):$(TAG) .
 	docker push $(IMG_HUB)/$(SERVICE):$(TAG)
 
