Add image make.
Signed-off-by: jmzwcn <jmzwcn@jmzwcndeAir.lan>

--- a/pwa/Makefile
+++ b/pwa/Makefile
@@ -11,9 +11,11 @@ TAG?=${shell date "+%Y%m%d-%H%M"}
 #	./node_modules/.bin/vue-cli-service build --no-module
 #	docker build -t $(IMG_HUB)/$(SERVICE):$(TAG) .
 
+image:
+	docker build --platform=linux/arm64 -t $(IMG_HUB)/$(SERVICE):$(TAG) .
+
 #push:build
 push:
-	docker build --platform=linux/arm64 -t $(IMG_HUB)/$(SERVICE):$(TAG) .
 	docker push $(IMG_HUB)/$(SERVICE):$(TAG)
 
 resource:
