--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -1,7 +1,6 @@
 server {
     #listen 80;
-    listen 443 ssl;
-    http2 on;
+    listen 443 ssl http2;
     ssl_certificate /etc/fullchain.cer;
     ssl_certificate_key /etc/iyou.city.key;
 
