--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -1,13 +1,22 @@
 server {
-    #listen 80;
+    # listen 80;
+    # Enable QUIC and HTTP/3.
+    listen 443 quic reuseport;
+    # Enable HTTP/2
     listen 443 ssl http2;
+    
     ssl_certificate /etc/fullchain.cer;
     ssl_certificate_key /etc/iyou.city.key;
 
+    # Enable recent TLS versions (TLSv1.3 is required for QUIC).
+    ssl_protocols TLSv1.2 TLSv1.3;
+    
     root /usr/share/nginx/html;
     index index.html index.htm;
 
     location / {
+        # required for browsers to direct them to quic port
+        add_header Alt-Svc 'h3=":8443"; ma=86400';
         try_files $uri $uri/ /index.html;
     }
 
