--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -4,7 +4,8 @@ server {
     listen 443 ssl http2;
     # Enable HTTP/3.
     listen 443 ssl http3 reuseport;
-
+    #listen 443 ssl quic reuseport;
+    
     ssl_certificate /etc/fullchain.cer;
     ssl_certificate_key /etc/iyou.city.key;
     
