--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -1,10 +1,11 @@
 server {
     # listen 80;
-    # Enable HTTP/2
-    listen 443 ssl http2;
-    # Enable HTTP/3.
+    # Enable QUIC and HTTP/3
     listen 443 ssl http3 reuseport;
     #listen 443 ssl quic reuseport;
+    # Enable HTTP/2
+    listen 443 ssl http2;
+
     
     ssl_certificate /etc/fullchain.cer;
     ssl_certificate_key /etc/iyou.city.key;
