--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -1,8 +1,7 @@
 server {
     # listen 80;
     # Enable QUIC and HTTP/3
-    listen 443 ssl http3 reuseport;
-    #listen 443 ssl quic reuseport;
+    listen 443 ssl quic reuseport;
     # Enable HTTP/2
     listen 443 ssl http2;
 
@@ -12,6 +11,11 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
+    # Enable QUIC and HTTP/3
+    ssl_quic on;
+    ssl_early_data on;
+    add_header Alt-Svc 'h3=":$server_port"; ma=86400';
+    
     location / {
         try_files $uri $uri/ /index.html;
     }
