--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -15,6 +15,9 @@ server {
     ssl_quic on;
     ssl_early_data on;
     add_header Alt-Svc 'h3=":$server_port"; ma=86400';
+
+    # intermediate configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
     
     location / {
         try_files $uri $uri/ /index.html;
