--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -12,7 +12,7 @@ server {
     index index.html index.htm;
 
     # Enable QUIC and HTTP/3
-    ssl_quic on;
+    #ssl_quic on;
     ssl_early_data on;
     add_header Alt-Svc 'h3=":$server_port"; ma=86400';
 
