--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -1,5 +1,7 @@
 server {
     # listen 80;
+    # enable HTTP/3
+    listen 443 quic reuseport;
     listen 443 ssl http2;
 
     ssl_certificate /etc/fullchain.cer;
