Enable quic service.

--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -1,7 +1,8 @@
 server {
     # listen 80;
-    # enable HTTP/3
+    # Enable QUIC and HTTP/3.
     listen 443 quic reuseport;
+    # Enable HTTP/2.
     listen 443 ssl http2;
 
     ssl_certificate /etc/fullchain.cer;
@@ -11,6 +12,8 @@ server {
     index index.html index.htm;
     
     location / {
+        # advertise that QUIC is available on the configured port
+        add_header Alt-Svc 'h3=":$server_port"; ma=86400';
         try_files $uri $uri/ /index.html;
     }
 
