--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -17,17 +17,15 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+    add_header 'Access-Control-Allow-Headers' 'Content-Type';
     location /zwan {
-        #auth_request /auth
+        if ($request_method = 'OPTIONS') {
+            return 200;
+        }
         grpc_set_header Content-Type application/grpc;
         grpc_set_header X-Forwarded-For $remote_addr;
         grpc_pass grpc://zwan:50051;
     }
-
-    # location /auth {
-    #     proxy_pass ...
-    #     proxy_pass_request_body off;
-    #     proxy_set_header Content-Length "";
-    #     proxy_set_header X-Original-URI $request_uri;
-    # }
 }
