--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -10,6 +10,10 @@ server {
     
     root /usr/share/nginx/html;
     index index.html index.htm;
+
+    # Enable gzip
+    gzip on;
+    gzip_types *;
     
     location / {
         # advertise that QUIC is available on the configured port
