--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -14,6 +14,7 @@ server {
     # Enable gzip
     gzip on;
     gzip_types *;
+    gzip_proxied any;
     gzip_min_length 1k;
     
     location / {
