--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -13,9 +13,9 @@ server {
 
     # Enable gzip
     gzip on;
-    gzip_types *;
     gzip_proxied any;
     gzip_min_length 1k;
+    gzip_types text/plain application/javascript application/x-javascript text/css application/xml text/javascript;
     
     location / {
         # advertise that QUIC is available on the configured port
