--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -25,7 +25,7 @@ server {
 
     add_header 'Access-Control-Allow-Origin' '*';
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-    add_header 'Access-Control-Allow-Headers' 'Content-Type';
+    add_header 'Access-Control-Allow-Headers' 'content-type,x-user-agent,x-grpc-web';
     location /zwan {
         if ($request_method = 'OPTIONS') {
             return 200;
