--- a/pwa/nginx.conf
+++ b/pwa/nginx.conf
@@ -23,13 +23,15 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Enable CORS
     add_header 'Access-Control-Allow-Origin' '*';
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
     add_header 'Access-Control-Allow-Headers' 'content-type,x-user-agent,x-grpc-web';
+    if ($request_method = 'OPTIONS') {
+        return 204;
+    }
+    
     location /zwan {
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
         grpc_set_header Content-Type application/grpc;
         grpc_set_header X-Forwarded-For $remote_addr;
         grpc_pass grpc://zwan:50051;
