--- a/pwa/Dockerfile
+++ b/pwa/Dockerfile
@@ -8,8 +8,7 @@ RUN npm run build
 
 # generate certs
 FROM neilpang/acme.sh as certs-gen
-ENV CF_Key 8c71d824811a387925e02195889cc72bee5b5
-ENV CF_Email jmzwcn@qq.com
+ENV CF_Key="8c71d824811a387925e02195889cc72bee5b5" CF_Email="jmzwcn@qq.com"
 RUN --register-account -m jmzwcn@qq.com && --issue -d iyou.city -d *.iyou.city --dns dns_cf
 
 # copy the static dist files 
